ggplot2 0.7.1  (2008-XX)
----------------------------------------

* scale_position: both discrete and continuous gain a new formatter argument to control the default formatting of the axis labels, see also handy numeric formatters: dollar, comma and percent
* facet_wrap: new facetter which wraps a 1d ribbon of panels into 2d
* qplot: now uses facet_wrap if formula looks like ~ a + b (as opposed to a ~ b)
* facet_grid: new support for varying scales in rows and columns
* scale_discrete_position: empty levels are no longer displayed by default, if you want them, use breaks = levels(myfactor)
* ggsave: default dpi changed to 300, on the assumption that you are saving the plot for printing
* scale_gradient: tweak default colours to make more aesthetically pleasing
* geom_bin: gains drop argument to control whether or not 0 count bins should be removed
* geom_hexbin & stat_hexbin: hexagonal binning and drawing
* geom_bin2d: 2d binning
* stat_bin: correctly returns 0 when no observations in a bin (was previously returning NA)
* geom_freqpoly: draws frequency polygons (= stat_bin + geom_line)
* geom_path: lines have squared end
* ggopt now points to ggtheme
* stat_boxplot: deal with yet another new output format from quantreg

See CHANGELOG for changes in previous versions